salesforce/force-app/main/default/objects/Compliance_Document_Link__c/Compliance_Document_Link__c.object-meta.xml
<CustomObject>
    <description>Junction: one row per document linked to a checklist requirement (Compliance_Assessment__c). A requirement can have MULTIPLE linked documents (e.g. Lab Director credential + personnel roster both satisfying one requirement) — each keeps its own AI verdict/summary/audit trail here; the parent Compliance_Assessment__c.Status__c is a worst-wins rollup over its child rows.</description>
    <label>Compliance Document Link</label>
    <nameField>
        <displayFormat>CDL-{0000}</displayFormat>
        <label>Compliance Document Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Document Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>