salesforce/force-app/main/default/objects/Compliance_Document_Link__c/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <description>The AI engine&apos;s confidence (0-100) in THIS document's own assessment.</description>
    <label>AI Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>