salesforce/force-app/main/default/objects/Compliance_Document_Link__c/fields/Compliance_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Assessment__c</fullName>
    <description>The checklist requirement this document satisfies (in whole or in part). A requirement can have multiple Compliance_Document_Link__c children when it needs more than one file.</description>
    <label>Compliance Assessment</label>
    <referenceTo>Compliance_Assessment__c</referenceTo>
    <relationshipLabel>Document Links</relationshipLabel>
    <relationshipName>Document_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>