salesforce/force-app/main/default/objects/Compliance_Document_Link__c/fields/Compliance_Document__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Document__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The specific uploaded file this AI verdict/summary applies to. Cascade: deleting the underlying Compliance_Document__c (e.g. a supplier removing an unmatched upload) removes its link row too — the parent Compliance_Assessment__c requirement itself is untouched.</description>
    <label>Compliance Document</label>
    <referenceTo>Compliance_Document__c</referenceTo>
    <relationshipLabel>Document Links</relationshipLabel>
    <relationshipName>Document_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>