salesforce/force-app/main/default/objects/Compliance_Document_Link__c/fields/Evaluation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_DateTime__c</fullName>
    <description>When this specific document's AI assessment was generated.</description>
    <label>Evaluation Date/Time</label>
    <type>DateTime</type>
</CustomField>