salesforce/force-app/main/default/objects/Compliance_Document_Link__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <description>Reason code for THIS file's own non-compliance outcome, if any.</description>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing_Document</fullName>
                <label>Missing Document</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Rule_Not_Met</fullName>
                <label>Rule Not Met</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>