salesforce/force-app/main/default/objects/Compliance_Document_Link__c/fields/Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Detail__c</fullName>
    <description>This file's own AI summary/reason detail — same structured format DocAssessQueueable.buildDetail already produces, scoped to just this document.</description>
    <label>Reason Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>