salesforce/force-app/main/default/objects/Compliance_Document_Link__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This file&apos;s own AI compliance verdict — mirrors Compliance_Assessment__c.Status__c&apos;s picklist exactly. The parent requirement&apos;s Status__c is a worst-wins rollup over all its Compliance_Document_Link__c children.</description>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non_Compliant</fullName>
                <label>Non-Compliant</label>
            </value>
            <value>
                <fullName>At_Risk</fullName>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>