salesforce/force-app/main/default/objects/Compliance_Document_Link__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <description>This file's own extracted expiry date, if any. The parent requirement's Valid_Until__c rolls up to the EARLIEST expiry among its linked documents — the soonest-expiring file governs when the requirement itself needs renewal (ComplianceExpiryBatch reads the parent field, unchanged).</description>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>